--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.15.0",
     "@strapi/provider-upload-cloudinary": "^5.2.0",
     "@strapi/strapi": "4.15.0",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "sqlite3": "^5.1.7"
   },
   "author": {
     "name": "A Strapi developer"
