--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-users-permissions": "4.15.0",
     "@strapi/provider-upload-cloudinary": "^5.2.0",
     "@strapi/strapi": "4.15.0",
+    "people": "file:",
     "pg": "8.8.0",
     "sqlite3": "^5.1.7"
   },
